# tree-sitter-zscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-zscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_zscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterZscript/: zscript.h
bindings/swift/TreeSitterZscriptTests/: TreeSitterZscriptTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: classes.txt  defaults.txt  directives.txt  enums.txt  expressions.txt  fields.txt  methods.txt  statements.txt  states.txt  types.txt
